--- a/ElevationDesignation/ElevationDesignation.csproj
+++ b/ElevationDesignation/ElevationDesignation.csproj
@@ -67,6 +67,14 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+	<Reference Include="RevitAPI" Condition=" '$(Configuration)' == 'Debug2023' or '$(Configuration)' == 'Release2023'">
+      <HintPath>$(ProgramW6432)\Autodesk\Revit 2023\RevitAPI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="RevitAPI" Condition=" '$(Configuration)' == 'Debug2023' or '$(Configuration)' == 'Release2023'">
+      <HintPath>$(ProgramW6432)\Autodesk\Revit 2023\RevitAPIUI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>  
     <Reference Include="RevitAPI" Condition=" '$(Configuration)' == 'Debug2024' or '$(Configuration)' == 'Release2024'">
       <HintPath>$(ProgramW6432)\Autodesk\Revit 2024\RevitAPI.dll</HintPath>
       <Private>False</Private>
@@ -74,14 +82,7 @@
     <Reference Include="RevitAPI" Condition=" '$(Configuration)' == 'Debug2024' or '$(Configuration)' == 'Release2024'">
       <HintPath>$(ProgramW6432)\Autodesk\Revit 2024\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
-    </Reference>
-    <Reference Include="RevitAPI, Version=23.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2023\RevitAPI.dll</HintPath>
-    </Reference>
-    <Reference Include="RevitAPIUI">
-      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2023\RevitAPIUI.dll</HintPath>
-    </Reference>
+    </Reference>    
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xaml" />
